--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "gulp-plumber": "^1.2.0",
         "gulp-postcss": "^7.0.1",
         "gulp-pug": "^4.0.1",
+        "gulp-pug-linter": "^0.6.0",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.0.1",
