--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "body-parser": "^1.18.2",
         "browser-sync": "^2.24.6",
+        "del": "^3.0.0",
         "express": "^4.16.2",
         "gulp-cli": "^2.0.1",
         "lint-staged": "^7.2.2",
