--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
-        "browser-sync": "^2.24.6",
-        "express": "^4.16.2",
+        "browser-sync": "^2.26.3",
+        "express": "^4.16.4",
         "gulp-cli": "^2.0.1",
         "lint-staged": "^7.2.2",
-        "morgan": "^1.9.0",
+        "morgan": "^1.9.1",
         "pug": "^2.0.3"
     },
     "devDependencies": {
@@ -39,24 +39,24 @@
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
         "beeper": "^1.1.1",
-        "fancy-log": "^1.3.2",
-        "foundation-sites": "^6.5.0-rc.2",
+        "fancy-log": "^1.3.3",
+        "foundation-sites": "^6.5.1",
         "gulp": "^4.0.0",
-        "gulp-autoprefixer": "^5.0.0",
-        "gulp-clean-css": "^3.10.0",
+        "gulp-autoprefixer": "^6.0.0",
+        "gulp-clean-css": "^4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-eslint": "^5.0.0",
         "gulp-header": "^2.0.5",
-        "gulp-iconfont": "^10.0.1",
+        "gulp-iconfont": "^10.0.2",
         "gulp-iconfont-css": "^2.3.0",
-        "gulp-nodemon": "^2.2.1",
-        "gulp-plumber": "^1.2.0",
-        "gulp-postcss": "^7.0.1",
+        "gulp-nodemon": "^2.4.2",
+        "gulp-plumber": "^1.2.1",
+        "gulp-postcss": "^8.0.0",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
-        "gulp-sass": "^4.0.1",
-        "gulp-svgmin": "^1.2.4",
+        "gulp-sass": "^4.0.2",
+        "gulp-svgmin": "^2.1.0",
         "gulp-zip": "^4.2.0",
         "husky": "^0.14.3",
         "jquery": "^3.3.1",
@@ -64,11 +64,11 @@
         "path": "^0.12.7",
         "postcss-reporter": "^6.0.0",
         "postcss-scss": "^2.0.0",
-        "prettier": "^1.14.2",
+        "prettier": "^1.15.3",
         "serve-favicon": "^2.4.5",
-        "stylelint": "^9.5.0",
+        "stylelint": "^9.9.0",
         "vinyl-ftp": "^0.6.1",
-        "webpack": "^4.17.1",
-        "webpack-stream": "^5.1.1"
+        "webpack": "^4.27.1",
+        "webpack-stream": "^5.2.1"
     }
 }
