--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,21 @@
 {
-  "rules": {
-      "no-console": 0,
-      "indent": 2,
-      "quotes": [
-          2,
-          "single"
-      ],
-      "linebreak-style": [
-          2,
-          "unix"
-      ],
-      "semi": [
-          2,
-          "always"
-      ]
-  },
-  "env": {
-      "es6": true,
-      "node": true
-  },
-  "extends": "eslint:recommended"
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "extends": ["airbnb-base", "plugin:prettier/recommended"],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "rules": {
+        "indent": ["error", 4],
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+        "comma-dangle": ["error", "never"],
+        "prettier/prettier": "error"
+    }
 }
