--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "precommit": "lint-staged",
         "format": "prettier --write 'app/{sass,js,routes}/**/*.{scss,js}'",
         "formatConfig": "prettier --write '{gulpfile.babel.js,package.json,webpack.config.js,.prettierrc,server.js}'"
+        "eslint": "eslint app/js/ --ext .js --fix",
     },
     "lint-staged": {
         "app/{sass,js,routes}/**/*.{scss,js}": [
@@ -40,13 +41,18 @@
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
         "beeper": "^1.1.1",
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-config-prettier": "^4.3.0",
+        "eslint-plugin-import": "^2.17.3",
+        "eslint-plugin-prettier": "^3.1.0",
         "fancy-log": "^1.3.3",
         "foundation-sites": "^6.5.1",
         "gulp": "^4.0.0",
         "gulp-autoprefixer": "^6.0.0",
         "gulp-clean-css": "^4.0.0",
         "gulp-concat": "^2.6.1",
-        "gulp-eslint": "^5.0.0",
+        "gulp-header": "^2.0.7",
         "gulp-header": "^2.0.5",
         "gulp-iconfont": "^10.0.2",
         "gulp-iconfont-css": "^2.3.0",
