--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,24 +1,32 @@
-"rules": {
-    "string-quotes": "single",
-    "no-duplicate-selectors": true,
-    "color-hex-case": "lower",
-    "selector-combinator-space-before": "always",
-    "selector-combinator-space-after": "always",
-    "declaration-block-trailing-semicolon": "always",
-    "declaration-colon-space-before": "never",
-    "declaration-colon-space-after": "always",
-    "number-leading-zero": "never",
-    "selector-pseudo-element-colon-notation": "single",
-    "shorthand-property-no-redundant-values": true,
-    "max-nesting-depth": 3,
-    "block-no-empty": true,
-    "font-family-no-duplicate-names": true,
-    "declaration-block-no-duplicate-properties": true,
-    "no-duplicate-at-import-rules": true,
-    "comment-no-empty": true,
-    "no-extra-semicolons": true,
-    "block-opening-brace-space-before": "always",
-    "at-rule-semicolon-newline-after": "always",
-    "declaration-block-semicolon-newline-after": "always",
-    "length-zero-no-unit": true
+{
+  "extends": ["stylelint-config-recommended", "stylelint-prettier/recommended"],
+  "plugins": ["stylelint-prettier"],
+  "rules": {
+      "no-empty-source": null,
+      "at-rule-no-unknown": null,
+      "no-descending-specificity": null,
+      "string-quotes": "single",
+      "no-duplicate-selectors": true,
+      "color-hex-case": "lower",
+      "selector-combinator-space-before": "always",
+      "selector-combinator-space-after": "always",
+      "declaration-block-trailing-semicolon": "always",
+      "declaration-colon-space-before": "never",
+      "declaration-colon-space-after": "always",
+      "number-leading-zero": "never",
+      "selector-pseudo-element-colon-notation": "single",
+      "shorthand-property-no-redundant-values": true,
+      "max-nesting-depth": 3,
+      "block-no-empty": true,
+      "font-family-no-duplicate-names": true,
+      "declaration-block-no-duplicate-properties": true,
+      "no-duplicate-at-import-rules": true,
+      "comment-no-empty": true,
+      "no-extra-semicolons": true,
+      "block-opening-brace-space-before": "always",
+      "at-rule-semicolon-newline-after": "always",
+      "declaration-block-semicolon-newline-after": "always",
+      "length-zero-no-unit": true,
+      "prettier/prettier": true
+  }
 }
