--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
         "node": ">=10.1.0"
     },
     "scripts": {
-        "precommit": "lint-staged",
         "format": "prettier --write 'app/{sass,js,routes}/**/*.{scss,js}'",
-        "formatConfig": "prettier --write '{gulpfile.babel.js,package.json,webpack.config.js,.prettierrc,server.js}'"
+        "formatConfig": "prettier --write '{gulpfile.babel.js,package.json,webpack.config.js,.prettierrc,.eslintrc.js,server.js}'",
         "eslint": "eslint app/js/ --ext .js --fix",
         "stylelint": "stylelint app/sass/app.scss --fix"
     },
@@ -37,59 +36,58 @@
         ]
     },
     "dependencies": {
-        "body-parser": "^1.18.2",
-        "browser-sync": "^2.26.3",
-        "del": "^3.0.0",
-        "express": "^4.16.4",
-        "gulp-cli": "^2.0.1",
-        "lint-staged": "^7.2.2",
+        "body-parser": "^1.19.0",
+        "browser-sync": "^2.26.7",
+        "del": "^4.1.1",
+        "express": "^4.17.1",
+        "gulp-cli": "^2.2.0",
+        "lint-staged": "^8.2.0",
         "morgan": "^1.9.1",
-        "pug": "^2.0.3"
+        "pug": "^2.0.3",
         "stylelint-config-standard": "^18.3.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
-        "beeper": "^1.1.1",
+        "beeper": "^2.0.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-import": "^2.17.3",
         "eslint-plugin-prettier": "^3.1.0",
         "fancy-log": "^1.3.3",
-        "foundation-sites": "^6.5.1",
-        "gulp": "^4.0.0",
-        "gulp-autoprefixer": "^6.0.0",
-        "gulp-clean-css": "^4.0.0",
+        "foundation-sites": "^6.5.3",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^6.1.0",
+        "gulp-clean-css": "^4.2.0",
         "gulp-concat": "^2.6.1",
         "gulp-header": "^2.0.7",
-        "gulp-header": "^2.0.5",
-        "gulp-iconfont": "^10.0.2",
-        "gulp-iconfont-css": "^2.3.0",
+        "gulp-iconfont": "^10.0.3",
+        "gulp-iconfont-css": "^3.0.0",
         "gulp-nodemon": "^2.4.2",
         "gulp-plumber": "^1.2.1",
         "gulp-pug": "^4.0.1",
-        "gulp-pug-linter": "^0.6.0",
+        "gulp-pug-linter": "^1.1.0",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.0.2",
-        "gulp-svgmin": "^2.1.0",
-        "gulp-zip": "^4.2.0",
-        "husky": "^0.14.3",
-        "jquery": "^3.3.1",
-        "moment": "^2.22.2",
+        "gulp-svgmin": "^2.2.0",
+        "gulp-zip": "^5.0.0",
+        "husky": "^2.4.0",
+        "jquery": "^3.4.1",
+        "moment": "^2.24.0",
         "path": "^0.12.7",
         "postcss-reporter": "^6.0.1",
         "postcss-scss": "^2.0.0",
-        "prettier": "^1.15.3",
+        "prettier": "^1.18.2",
         "serve-favicon": "^2.4.5",
         "stylelint": "^10.1.0",
         "stylelint-config-prettier": "^5.2.0",
         "stylelint-config-recommended": "^2.2.0",
         "stylelint-prettier": "^1.1.1",
         "vinyl-ftp": "^0.6.1",
-        "webpack": "^4.27.1",
+        "webpack": "^4.33.0",
         "webpack-stream": "^5.2.1"
     }
 }
