--- a/package.json
+++ b/package.json
@@ -40,58 +40,58 @@
         ]
     },
     "dependencies": {
+        "@babel/preset-env": "^7.9.6",
         "body-parser": "^1.19.0",
         "browser-sync": "^2.26.7",
-        "del": "^5.0.0",
+        "del": "^5.1.0",
         "express": "^4.17.1",
         "gulp-cli": "^2.2.0",
-        "lint-staged": "^9.0.2",
-        "morgan": "^1.9.1",
+        "lint-staged": "^10.2.2",
+        "morgan": "^1.10.0",
         "pug": "^2.0.4",
-        "stylelint-config-standard": "^18.3.0"
+        "stylelint-config-standard": "^20.0.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-loader": "^7.1.5",
-        "babel-preset-env": "^1.7.0",
+        "@babel/core": "^7.9.6",
+        "babel-loader": "^8.1.0",
         "beeper": "^2.0.0",
-        "eslint": "^6.0.1",
-        "eslint-config-airbnb-base": "^13.2.0",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-plugin-import": "^2.18.0",
-        "eslint-plugin-prettier": "^3.1.0",
+        "eslint": "^7.0.0",
+        "eslint-config-airbnb-base": "^14.1.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-prettier": "^3.1.3",
         "fancy-log": "^1.3.3",
-        "foundation-sites": "^6.5.3",
+        "foundation-sites": "^6.6.3",
         "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^6.1.0",
-        "gulp-clean-css": "^4.2.0",
+        "gulp-autoprefixer": "^7.0.1",
+        "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
-        "gulp-header": "^2.0.7",
+        "gulp-header": "^2.0.9",
         "gulp-iconfont": "^10.0.3",
         "gulp-iconfont-css": "^3.0.0",
-        "gulp-nodemon": "^2.4.2",
+        "gulp-nodemon": "^2.5.0",
         "gulp-plumber": "^1.2.1",
         "gulp-pug": "^4.0.1",
-        "gulp-pug-linter": "^1.2.0",
-        "gulp-rename": "^1.4.0",
+        "gulp-pug-linter": "^1.3.0",
+        "gulp-rename": "^2.0.0",
         "gulp-replace": "^1.0.0",
-        "gulp-sass": "^4.0.2",
+        "gulp-sass": "^4.1.0",
         "gulp-svgmin": "^2.2.0",
-        "gulp-zip": "^5.0.0",
-        "husky": "^3.0.0",
-        "jquery": "^3.4.1",
-        "moment": "^2.24.0",
+        "gulp-zip": "^5.0.1",
+        "husky": "^4.2.5",
+        "jquery": "^3.5.1",
+        "moment": "^2.25.3",
         "path": "^0.12.7",
         "postcss-reporter": "^6.0.1",
-        "postcss-scss": "^2.0.0",
-        "prettier": "^1.18.2",
+        "postcss-scss": "^2.1.0",
+        "prettier": "^2.0.5",
         "serve-favicon": "^2.4.5",
-        "stylelint": "^10.1.0",
-        "stylelint-config-prettier": "^5.2.0",
-        "stylelint-config-recommended": "^2.2.0",
-        "stylelint-prettier": "^1.1.1",
+        "stylelint": "^13.4.0",
+        "stylelint-config-prettier": "^8.0.1",
+        "stylelint-config-recommended": "^3.0.0",
+        "stylelint-prettier": "^1.1.2",
         "vinyl-ftp": "^0.6.1",
-        "webpack": "^4.35.2",
+        "webpack": "^4.43.0",
         "webpack-stream": "^5.2.1"
     }
 }
